# Post_API_fastapi

./: .env.ci  .gitignore  Dockerfile  LICENSE  README.md  auth.py  crud.py  database.py  dependencies.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0222483db6ac_add_like_table_again.py  381989bb5e9b_added_following_table.py  532f980c280a_add_like_n_dislike_to_post_table.py  5e6cd4636ee8_add_tsvector_column_and_trigger.py  664181b851a5_add_like_count_and_dislike_count_to_.py  6bbc5609746a_initial_2.py  78b22330eb0f_add_comments.py  9d3ffac0dde5_update_user.py  d7d07ecd7fa2_added_tags.py  e39ffb19b63c_added_user_roles.py  efdade352e12_add_like_table.py
app/: main.py  websockets.py
app/api/: auth.py  comment.py  deps.py  follow.py  posts.py  users.py  websocket.py
app/core/: security.py
app/crud/: comment.py  post.py  user.py
app/db/: base.py  models.py  session.py
app/models/: comment.py  like.py  post.py  user.py
app/schemas/: comment.py  like.py  post.py  tag.py  user.py
app/services/: cache.py  rate_limiter.py
backend/: Dockerfile  requirements.txt
backend/app/: main.py  websockets.py
backend/app/api/: auth.py  (+3 more)
backend/tests/: test_users.py
frontend/: package-lock.json
frontend/.svelte-kit/: ambient.d.ts
svelte-frontend/: package-lock.json
svelte-frontend/src/: App.svelte
tests/: conftest.py  test_comments.py  test_content_moderation.py  test_follow.py  test_like_dislike.py  test_posts.py  test_subscription.py  test_users.py
(+25 files in other folders)
