[tool.poetry]
name = "post-api-fastapi"
version = "0.1.0"
description = "Social Media API written in FastAPI"
authors = ["ishworii <ishworkhanal21@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
fastapi-limiter = "^0.1.6"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
